[project]
name = "cellprofiler-mt-network"
version = "0.1.0"
description = "Spatial graph analysis of mitochondrial networks from CellProfiler data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "pillow>=9.0.0",
    "scikit-image>=0.20.0",
    "streamlit>=1.28.0",
    "streamlit-drawable-canvas>=0.9.0",
]
